{
  "version": 4,
  "terraform_version": "1.0.2",
  "serial": 89,
  "lineage": "abc86d03-fabd-22e0-1e69-d62c1c0ceb24",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-036490d46656c4818",
            "arn": "arn:aws:ec2:us-east-1:119077514921:instance/i-0002d69f4ae19e08c",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0002d69f4ae19e08c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-05eb73ab0cdab007c"
              }
            ],
            "primary_network_interface_id": "eni-05eb73ab0cdab007c",
            "private_dns": "ip-10-0-1-182.ec2.internal",
            "private_ip": "10.0.1.182",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09bdc80bcc19aa4c8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f793c2b7d90745b7",
            "tags": {
              "Environment": "Dev",
              "Name": "TFDemo-web",
              "owner": "IT"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "TFDemo-web",
              "owner": "IT"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d7b37c2216a65836"
            ]
          },
          "dependencies": [
            "data.aws_ami.ubuntu",
            "aws_network_interface.web",
            "aws_security_group.web",
            "aws_subnet.xyz",
            "aws_vpc.xyz"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "xyz",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:119077514921:internet-gateway/igw-09909ca7270d6c197",
            "id": "igw-09909ca7270d6c197",
            "owner_id": "119077514921",
            "tags": {
              "Environment": "Dev",
              "Name": "TFDemo_GW",
              "owner": "IT"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "TFDemo_GW",
              "owner": "IT"
            },
            "vpc_id": "vpc-0ddd3a22db96caf39"
          },
          "dependencies": [
            "aws_vpc.xyz"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-0541c125e09cadce8",
                "device_index": 0,
                "instance": "i-0002d69f4ae19e08c"
              }
            ],
            "id": "eni-05eb73ab0cdab007c",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "16:eb:47:55:56:89",
            "private_ip": "10.0.1.182",
            "private_ips": [
              "10.0.1.182"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0d7b37c2216a65836"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f793c2b7d90745b7",
            "tags": {
              "Name": "web_nic"
            },
            "tags_all": {
              "Name": "web_nic"
            }
          },
          "dependencies": [
            "aws_security_group.web",
            "aws_subnet.xyz",
            "aws_vpc.xyz"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:119077514921:route-table/rtb-084babd0a6fe27c6a",
            "id": "rtb-084babd0a6fe27c6a",
            "owner_id": "119077514921",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09909ca7270d6c197",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Dev",
              "Name": "TFDemo_Public_RT",
              "owner": "IT"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "TFDemo_Public_RT",
              "owner": "IT"
            },
            "vpc_id": "vpc-0ddd3a22db96caf39"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.xyz",
            "aws_vpc.xyz"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0171c45a17e88b3f6",
            "route_table_id": "rtb-084babd0a6fe27c6a",
            "subnet_id": "subnet-0f793c2b7d90745b7"
          },
          "dependencies": [
            "aws_vpc.xyz",
            "aws_internet_gateway.xyz",
            "aws_route_table.public",
            "aws_subnet.xyz"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:119077514921:security-group/sg-0d7b37c2216a65836",
            "description": "Allow SSH \u0026 HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d7b37c2216a65836",
            "ingress": [
              {
                "cidr_blocks": [
                  "45.117.65.0/24",
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "web-sg",
            "name_prefix": "",
            "owner_id": "119077514921",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web-SG"
            },
            "tags_all": {
              "Name": "Web-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ddd3a22db96caf39"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.xyz"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "HTP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-428622088",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0d7b37c2216a65836",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web",
            "aws_vpc.xyz"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "SSH",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "45.117.65.0/24"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2085318887",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0d7b37c2216a65836",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web",
            "aws_vpc.xyz"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3936414912",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0d7b37c2216a65836",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web",
            "aws_vpc.xyz"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "xyz",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:119077514921:subnet/subnet-0f793c2b7d90745b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0f793c2b7d90745b7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "119077514921",
            "tags": {
              "Environment": "Dev",
              "Name": "Web",
              "owner": "IT"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "Web",
              "owner": "IT"
            },
            "vpc_id": "vpc-0ddd3a22db96caf39"
          },
          "dependencies": [
            "aws_vpc.xyz"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "xyz",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:119077514921:vpc/vpc-0ddd3a22db96caf39",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e4c6b60361e94a44",
            "default_route_table_id": "rtb-08c8bfb8691e474e2",
            "default_security_group_id": "sg-04db0c0af77b2183f",
            "dhcp_options_id": "dopt-c42078be",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0ddd3a22db96caf39",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08c8bfb8691e474e2",
            "owner_id": "119077514921",
            "tags": {
              "Environment": "Dev",
              "Name": "TFDemo",
              "owner": "IT"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "TFDemo",
              "owner": "IT"
            }
          }
        }
      ]
    }
  ]
}